--- a/tournament.html
+++ b/tournament.html
@@ -21,7 +21,7 @@
       
       <!-- Logo + Text -->
       <div class="flex items-center gap-3">
-        <img src="We_are_eleven_logo copy.jpg" 
+        <img src="Independence-Cup-logo.jpg" 
              alt="We Are Eleven Logo" 
              class="h-14 w-14 sm:h-16 sm:w-16 rounded-full object-contain" />
         <h1 class="text-2xl font-bold">
@@ -98,3 +98,4 @@
 
 </body>
 </html>
+
