--- a/about_us.html
+++ b/about_us.html
@@ -7,60 +7,30 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      background: #f8fafc; /* Unified background */
-      color: #1e293b;
-      margin: 0;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    /* Header */
-    nav {
-      background-color: white;
-      box-shadow: 0 1px 3px rgb(0 0 0 / 0.1);
-      position: sticky;
-      top: 0;
-      z-index: 50;
-    }
-    .nav-link {
-      font-weight: 600;
-      font-size: 0.9rem;
-      color: #475569;
-      text-decoration: none;
-    }
-    .nav-link:hover,
-    .mobile-link:hover {
-      color: #2563EB;
-    }
-    .nav-link.active,
-    .mobile-link.active {
-      color: #2563EB;
-      font-weight: 700;
-    }
-    .mobile-link {
-      padding: 0.75rem 1rem;
-      font-weight: 600;
-      font-size: 1rem;
-      color: #475569;
-      text-decoration: none;
-      border-bottom: 1px solid #e2e8f0;
-    }
-    main {
-      flex-grow: 1;
-      padding: 2rem 1rem;
-    }
-    .card {
+      font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
       background: white;
-      padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 8px 20px rgb(0 0 0 / 0.1);
-      text-align: center;
+      color: #1e293b;
+    }
+
+    /* Floating animation for buttons (if needed elsewhere) */
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-6px); }
+    }
+
+    /* Watermark style */
+    .watermark img {
+      opacity: 0.06;
+      width: 500px;
+      max-width: 90%;
+    }
+
+    /* Card hover */
+    .card:hover, .winner-card:hover {
+      transform: translateY(-4px);
       transition: transform 0.2s ease;
     }
-    .card:hover {
-      transform: translateY(-4px);
-    }
+
     .avatar {
       width: 120px;
       height: 120px;
@@ -70,25 +40,10 @@
       border: 4px solid #e2e8f0;
     }
 
-    /* Winners Gallery Styles */
-    .winner-card {
-      background: #f1f5f9;
-      border-radius: 1rem;
-      box-shadow: 0 4px 12px rgb(0 0 0 / 0.08);
-      padding: 1.5rem 1rem;
-      text-align: center;
-      transition: transform 0.18s;
-    }
-
-    .winner-card:hover {
-      transform: translateY(-3px) scale(1.02);
-      box-shadow: 0 8px 24px rgb(0 0 0 / 0.14);
-    }
-
     .winner-photo {
       width: 100%;
       max-width: 320px;
-      aspect-ratio: 4 / 3;
+      aspect-ratio: 4/3;
       object-fit: cover;
       border-radius: 0.75rem;
       box-shadow: 0 2px 8px rgb(0 0 0 / 0.04);
@@ -96,104 +51,98 @@
     }
   </style>
 </head>
-<body>
+<body class="text-black flex flex-col min-h-screen">
+
   <!-- Header -->
-  <header>
-    <nav aria-label="Primary Navigation" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="header-inner flex justify-between items-center h-16">
-        <a href="index.html" class="brand flex items-center font-extrabold text-xl text-gray-900">
-          <img src="Logo.png" 
-               alt="We Are Eleven Logo" 
-               class="h-8 w-8 sm:h-10 sm:w-10 md:h-12 md:w-12 mr-2 rounded-full object-contain" />
-          We Are Eleven
-        </a>
-        <!-- Desktop Nav -->
-        <div class="desktop-nav hidden md:flex gap-6">
-          <a href="index.html" class="nav-link">Home</a>
-          <a href="team_list.html" class="nav-link">Teams</a>
-          <a href="team_fixtures.html" class="nav-link">Fixtures</a>
-          <a href="admin.html" class="nav-link">Admin</a>
-          <a href="about_us.html" class="nav-link active" aria-current="page">About Us</a>
-        </div>
-        <!-- Mobile button -->
-        <button id="mobile-menu-button" class="mobile-menu-button md:hidden" aria-label="Toggle menu" aria-expanded="false">
-          <svg class="h-6 w-6 text-slate-700" fill="none" stroke="currentColor" stroke-width="2"
-            viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M4 6h16M4 12h16M4 18h16"></path>
-          </svg>
-        </button>
+  <header class="bg-white shadow-lg sticky top-0 z-50">
+    <div class="container mx-auto flex justify-between items-center p-4">
+      <div class="flex items-center gap-3">
+        <img src="Logo.png" alt="We Are Eleven Logo" class="h-14 w-14 sm:h-16 sm:w-16 rounded-full object-contain" />
+        <h1 class="text-2xl font-bold">
+          <span class="text-gray-900">We Are</span>
+          <span class="text-red-600">Eleven</span>
+        </h1>
       </div>
-      <!-- Mobile dropdown -->
-      <div id="mobile-menu" class="hidden flex flex-col bg-white shadow-md border-t border-slate-200">
-        <a href="index.html" class="mobile-link">Home</a>
-        <a href="team_list.html" class="mobile-link">Teams</a>
-        <a href="team_fixtures.html" class="mobile-link">Fixtures</a>
-        <a href="admin.html" class="mobile-link">Admin</a>
-        <a href="about_us.html" class="mobile-link active" aria-current="page">About Us</a>
-      </div>
-    </nav>
+      <nav class="space-x-6 hidden md:flex">
+        <a href="index.html" class="nav-link text-gray-700 font-medium">Home</a>
+        <a href="team_list.html" class="nav-link text-gray-700 font-medium">Teams</a>
+        <a href="team_fixtures.html" class="nav-link text-gray-700 font-medium">Fixtures</a>
+        <a href="admin.html" class="nav-link text-gray-700 font-medium">Admin</a>
+        <a href="about_us.html" class="nav-link active text-gray-700 font-medium" aria-current="page">About Us</a>
+      </nav>
+      <!-- Mobile menu button -->
+      <button id="mobile-menu-button" class="md:hidden" aria-label="Toggle menu">
+        <svg class="h-6 w-6 text-gray-700" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M4 6h16M4 12h16M4 18h16"></path>
+        </svg>
+      </button>
+    </div>
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="hidden flex flex-col bg-white shadow-md border-t border-slate-200">
+      <a href="index.html" class="mobile-link p-4 font-medium border-b border-slate-200">Home</a>
+      <a href="team_list.html" class="mobile-link p-4 font-medium border-b border-slate-200">Teams</a>
+      <a href="team_fixtures.html" class="mobile-link p-4 font-medium border-b border-slate-200">Fixtures</a>
+      <a href="admin.html" class="mobile-link p-4 font-medium border-b border-slate-200">Admin</a>
+      <a href="about_us.html" class="mobile-link p-4 font-medium active" aria-current="page">About Us</a>
+    </div>
   </header>
-  <!-- Main -->
-  <main class="max-w-6xl mx-auto">
+
+  <!-- Main Content -->
+  <main class="flex-grow max-w-6xl mx-auto p-4">
+
+    <!-- Organizers -->
     <h1 class="text-3xl font-bold mb-10 text-center">Meet The Organizers</h1>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-      <!-- Card 1 -->
-      <div class="card">
+      <div class="card bg-white rounded-2xl shadow-lg p-6 text-center">
         <img src="Debayan.jpg" alt="Debayan" class="avatar" />
-        <h2 class="text-xl font-semibold mb-2">Debayan</h2>
-        <p class="text-slate-600 text-sm">Co-Organizer</p>
+        <h2 class="text-xl font-semibold mb-1">Debayan</h2>
+        <p class="text-gray-700 text-sm">Co-Organizer</p>
       </div>
-      <!-- Card 2 -->
-      <div class="card">
+      <div class="card bg-white rounded-2xl shadow-lg p-6 text-center">
         <img src="Gourav.jpg" alt="Gourav" class="avatar" />
-        <h2 class="text-xl font-semibold mb-2">Gourav</h2>
-        <p class="text-slate-600 text-sm">Co-Organizer</p>
+        <h2 class="text-xl font-semibold mb-1">Gourav</h2>
+        <p class="text-gray-700 text-sm">Co-Organizer</p>
       </div>
-      <!-- Card 3 -->
-      <div class="card">
+      <div class="card bg-white rounded-2xl shadow-lg p-6 text-center">
         <img src="Jyotishka.jpg" alt="Jyotishka" class="avatar" />
-        <h2 class="text-xl font-semibold mb-2">Jyotishka</h2>
-        <p class="text-slate-600 text-sm">Co-Organizer</p>
+        <h2 class="text-xl font-semibold mb-1">Jyotishka</h2>
+        <p class="text-gray-700 text-sm">Co-Organizer</p>
       </div>
     </div>
-    <!-- New About Us section -->
-    <section class="bg-white rounded-2xl shadow p-6 mt-12 text-slate-700 leading-relaxed text-justify">
-      <p>
-        Welcome to&nbsp;<strong>We Are Eleven</strong>, a passionate football community that embodies the spirit of unity, teamwork, and excellence on and off the pitch.
-      </p>
-      <p class="mt-4">
-        Founded on the belief that football is more than just a game, our community brings together a diverse team of players, organizers, and supporters who share one mission: to celebrate the beautiful game through competitive spirit, camaraderie, and unwavering dedication.
-      </p>
-      <p class="mt-4">
-        We are more than just eleven players; we are a family united by our love for football, striving to uplift and inspire each other with every kick. Whether it's intense tournaments, friendly matches, or community events, We Are Eleven stands as a symbol of passion, resilience, and sportsmanship.
-      </p>
-      <p class="mt-4">
-        Join us on this incredible journey towards greatness, as we continue to build a legacy of teamwork, respect, and unforgettable moments on the field. Together, we play, we conquer, we are eleven.
-      </p>
+
+    <!-- About Us Text -->
+    <section class="bg-white rounded-2xl shadow-lg p-6 mt-12 text-gray-700 leading-relaxed text-justify">
+      <p class="mt-4">Founded on the belief that football is more than just a game, our community brings together a diverse team of players, organizers, and supporters who share one mission: to celebrate the beautiful game through competitive spirit, camaraderie, and unwavering dedication.</p>
+      <p class="mt-4">We are more than just eleven players; we are a family united by our love for football, striving to uplift and inspire each other with every kick. Whether it's intense tournaments, friendly matches, or community events, We Are Eleven stands as a symbol of passion, resilience, and sportsmanship.</p>
+      <p class="mt-4">Join us on this incredible journey towards greatness, as we continue to build a legacy of teamwork, respect, and unforgettable moments on the field. Together, we play, we conquer, we are eleven.</p>
     </section>
 
-    <!-- Winners Gallery -->
-    <section class="bg-white rounded-2xl shadow p-6 mt-12">
-      <h2 class="text-2xl font-bold mb-8 text-center text-gray-800">Champions Gallery</h2>
+    <!-- Champions Gallery -->
+    <section class="bg-white rounded-2xl shadow-lg p-6 mt-12">
+      <h2 class="text-2xl font-bold mb-8 text-center">Champions Gallery</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- Winner Year 2024 -->
-        <div class="winner-card">
-          <img src="Winner2024.jpg" alt="2024 Winners" class="winner-photo" />
+        <div class="winner-card bg-white rounded-2xl shadow-lg p-4 text-center">
+          <img src="Winner2024.jpg" alt="2024 Winners" class="winner-photo mx-auto" />
           <h3 class="text-lg font-semibold mt-4">2024 Champions</h3>
         </div>
-        <!-- Winner Year 2023 -->
-        <div class="winner-card">
-          <img src="Winner2023.jpg" alt="2023 Winners" class="winner-photo" />
+        <div class="winner-card bg-white rounded-2xl shadow-lg p-4 text-center">
+          <img src="Winner2023.jpg" alt="2023 Winners" class="winner-photo mx-auto" />
           <h3 class="text-lg font-semibold mt-4">2023 Champions</h3>
         </div>
-        <!-- Winner Year 2022 -->
-        <div class="winner-card">
-          <img src="Winner2022.jpg" alt="2022 Winners" class="winner-photo" />
+        <div class="winner-card bg-white rounded-2xl shadow-lg p-4 text-center">
+          <img src="Winner2022.jpg" alt="2022 Winners" class="winner-photo mx-auto" />
           <h3 class="text-lg font-semibold mt-4">2022 Champions</h3>
         </div>
       </div>
     </section>
+
   </main>
+
+  <!-- Footer -->
+  <footer class="bg-gray-950 py-6 text-center text-gray-400 mt-12">
+    <p>© 2025 Football Community. All Rights Reserved.</p>
+  </footer>
+
   <!-- Mobile menu script -->
   <script>
     const mobileMenuBtn = document.getElementById("mobile-menu-button");
