--- a/about_us.html
+++ b/about_us.html
@@ -57,7 +57,7 @@
   <header class="bg-white shadow-lg sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center p-4">
       <div class="flex items-center gap-3">
-        <img src="Logo.png" alt="We Are Eleven Logo" class="h-14 w-14 sm:h-16 sm:w-16 rounded-full object-contain" />
+        <img src="We_are_eleven_logo copy.jpg" alt="We Are Eleven Logo" class="h-14 w-14 sm:h-16 sm:w-16 rounded-full object-contain" />
         <h1 class="text-2xl font-bold">
           <span class="text-gray-900">We Are</span>
           <span class="text-red-600">Eleven</span>
