--- a/admin.html
+++ b/admin.html
@@ -12,28 +12,6 @@
     color: #1e293b;
   }
 
-    /* Header styling matching the fixtures page */
-    .nav-link {
-      transition: color 0.2s ease;
-    }
-
-    .nav-link:hover {
-      color: #374151;
-    }
-
-    .nav-link.active {
-      color: #dc2626;
-    }
-
-    .mobile-link:hover {
-      background: #f9fafb;
-    }
-
-    .mobile-link.active {
-      color: #dc2626;
-      background: #fef2f2;
-    }
-
     /* Login card styling */
     .login-card {
       background: linear-gradient(145deg, #ffffff 0%, #f8fafc 100%);
@@ -203,7 +181,7 @@
     }
   </style>
 </head>
-<body class="flex flex-col min-h-screen">
+<body class="text-black flex flex-col min-h-screen">
 
   <!-- Header -->
   <header class="bg-white shadow-lg sticky top-0 z-50">
