--- a/admin.html
+++ b/admin.html
@@ -185,7 +185,7 @@
 
   <!-- Header -->
   <header class="bg-white shadow-lg sticky top-0 z-50">
-    <div class="container mx-auto flex justify-between items-center p-4">
+    <div class="container mx-auto flex items-center justify-between p-4">
       <div class="flex items-center gap-3">
         <img src="We_are_eleven_logo copy.jpg" alt="We Are Eleven Logo" class="h-14 w-14 sm:h-16 sm:w-16 rounded-full object-contain" />
         <h1 class="text-2xl font-bold">
@@ -207,7 +207,6 @@
         </svg>
       </button>
     </div>
-    <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden flex flex-col bg-white shadow-md border-t border-slate-200">
       <a href="index.html" class="mobile-link p-4 font-medium border-b border-slate-200">Home</a>
       <a href="team_list.html" class="mobile-link p-4 font-medium border-b border-slate-200">Teams</a>
@@ -216,6 +215,7 @@
       <a href="about_us.html" class="mobile-link p-4 font-medium active" aria-current="page">About Us</a>
     </div>
   </header>
+
 
 
   <!-- Main Content -->
