--- a/admin.html
+++ b/admin.html
@@ -216,9 +216,9 @@
 		  </h1>
 		</div>
 		<nav class="space-x-6">
-		  <a href="index.html" class="nav-link active text-gray-700 font-medium" aria-current="page">Home</a>
+		  <a href="index.html" class="nav-link active text-gray-700 font-medium">Home</a>
 		  <a href="tournament.html" class="nav-link text-gray-700 font-medium">Tournaments</a>
-		  <a href="admin.html" class="nav-link text-gray-700 font-medium">Admin</a>
+		  <a href="admin.html" class="nav-link text-gray-700 font-medium" aria-current="page">Admin</a>
 		  <a href="about_us.html" class="nav-link text-gray-700 font-medium">About Us</a>
 		</nav>
 
