--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
       background: white;
     }
 
+  	.nav-link {
+  	  color: #4b5563; /* Tailwind gray-700 */
+  	  font-weight: 500; /* font-medium */
+  	  text-decoration: none;
+  	  transition: color 0.2s ease;
+  	}
+  
+  	.nav-link:hover {
+  	  color: #374151; /* Tailwind gray-800 */
+  	}
+  
+  	.nav-link.active {
+  	  color: #dc2626; /* Tailwind red-600 */
+  	}
+    
     /* ✅ Floating Animation */
     @keyframes float {
       0%, 100% { transform: translateY(0); }
