--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -182,8 +182,8 @@
       <nav class="space-x-6 hidden md:flex">
         <a href="index.html" class="nav-link text-gray-700 font-medium">Home</a>
         <a href="team_list.html" class="nav-link text-gray-700 font-medium">Teams</a>
-        <a href="team_fixtures.html" class="nav-link text-gray-700 font-medium">Fixtures</a>
-        <a href="admin.html" class="nav-link active text-gray-700 font-medium">Admin</a>
+        <a href="team_fixtures.html" class="nav-link active text-gray-700 font-medium">Fixtures</a>
+        <a href="admin.html" class="nav-link text-gray-700 font-medium">Admin</a>
         <a href="about_us.html" class="nav-link text-gray-700 font-medium" aria-current="page">About Us</a>
       </nav>
       <!-- Mobile menu button -->
@@ -617,5 +617,3 @@
   </script>
 </body>
 </html>
-
-
