--- a/tournament.html
+++ b/tournament.html
@@ -64,7 +64,7 @@
       <h1 class="text-3xl font-bold mb-6">Independence Cup 2025</h1>
       <div class="mb-6 space-y-4">
         <p><strong>📅 Event Date</strong><br>24 August 2025</p>
-        <p><strong>📍 Venue</strong><br><a href="https://maps.app.goo.gl/rh54oeV6jdJzYCpf6" target="_blank" rel="noopener noreferrer" class="text-red-600 hover:underline">Turf XL</a></p>
+        <p><strong>📍 Venue</strong><br><a href="https://maps.app.goo.gl/1aMXNvbHJBS5QxwT7" target="_blank" rel="noopener noreferrer" class="text-red-600 hover:underline">Turf XL</a></p>
         <p><strong>⏰ Time</strong><br>9:00 AM – 6:00 PM</p>
         <p><strong>👥 Organizers</strong><br>Debayan, Gourav &amp; Jyotishka</p>
         <p><strong>👥 Teams</strong><br>Thunderbolt, Red Bulls Eleven, Messiah FC, White Panthers, Strawhat Pirates, Amingos FC</p>
@@ -113,6 +113,7 @@
 
 </body>
 </html>
+
 
 
 
