--- a/index.html
+++ b/index.html
@@ -52,29 +52,7 @@
 <body class="text-black">
 
   <!-- ✅ Header -->
-  <header class="bg-white shadow-lg sticky top-0 z-50">
-    <div class="container mx-auto flex justify-between items-center p-4">
-      
-      <!-- Logo + Text -->
-      <div class="flex items-center gap-3">
-        <img src="We_are_eleven_logo copy.jpg" 
-             alt="We Are Eleven Logo" 
-             class="h-14 w-14 sm:h-16 sm:w-16 rounded-full object-contain" /> <!-- 🔥 Increased size -->
-        <h1 class="text-2xl font-bold">
-          <span class="text-gray-900">We Are</span> 
-          <span class="text-red-600">Eleven</span>
-        </h1>
-      </div>
-
-      <!-- Nav -->
-      <nav class="space-x-6">
-        <a href="index.html" class="nav-link active text-gray-700 font-medium" aria-current="page">Home</a>
-        <a href="tournament.html" class="nav-link text-gray-700 font-medium">Tournaments</a>
-        <a href="admin.html" class="nav-link text-gray-700 font-medium">Admin</a>
-        <a href="about_us.html" class="nav-link text-gray-700 font-medium">About Us</a>
-      </nav>
-    </div>
-  </header>
+  <div id="site-header"></div>
 
   <!-- ✅ Hero Section with Watermark + Description -->
   <section class="relative h-[80vh] flex flex-col items-center justify-center text-center px-4">
@@ -101,5 +79,18 @@
     <p>© 2025 Football Community. All Rights Reserved.</p>
   </footer>
 
+<script type="module">
+    import { injectHeader } from "header.js";
+    import { loadTeams, hydrateTeamLogos } from "teams-util.js";
+    // Header
+    injectHeader("#site-header", { active: "home" });
+    // Team/logo hydration (keeps names/logos consistent from data/teams.json)
+    try {
+      const maps = await loadTeams();
+      hydrateTeamLogos(document, maps);
+    } catch (e) {
+      console.warn("Teams JSON load failed:", e);
+    }
+  </script>
 </body>
 </html>
