--- a/team_list.html
+++ b/team_list.html
@@ -69,27 +69,7 @@
 <body class="text-black">
 
   <!-- ✅ Header -->
-  <header class="bg-white shadow-lg sticky top-0 z-50">
-    <div class="container mx-auto flex justify-between items-center p-4">
-      <!-- Logo + Text -->
-      <div class="flex items-center gap-3">
-        <img src="We_are_eleven_logo copy.jpg" alt="We Are Eleven Logo" 
-             class="h-14 w-14 sm:h-16 sm:w-16 rounded-full object-contain" />
-        <h1 class="text-2xl font-bold">
-          <span class="text-gray-900">We Are</span>
-          <span class="text-red-600">Eleven</span>
-        </h1>
-      </div>
-      <!-- Nav -->
-      <nav class="space-x-6">
-        <a href="index.html" class="nav-link text-gray-700 font-medium">Home</a>
-        <a href="team_list.html" class="nav-link active text-gray-700 font-semibold">Teams</a>
-        <a href="team_fixtures.html" class="nav-link text-gray-700 font-medium">Fixtures</a>
-        <a href="admin.html" class="nav-link text-gray-700 font-medium">Admin</a>
-        <a href="about_us.html" class="nav-link text-gray-700 font-medium">About Us</a>
-      </nav>
-    </div>
-  </header>
+  <div id="site-header"></div>
 
   <!-- ✅ Hero Section -->
   <section class="relative py-12 flex flex-col items-center justify-center text-center px-4 bg-gray-50">
@@ -184,6 +164,19 @@
       `;
     }
     renderTabs();
+  </script>
+<script type="module">
+    import { injectHeader } from "header.js";
+    import { loadTeams, hydrateTeamLogos } from "teams-util.js";
+    // Header
+    injectHeader("#site-header", { active: "teams" });
+    // Team/logo hydration (keeps names/logos consistent from data/teams.json)
+    try {
+      const maps = await loadTeams();
+      hydrateTeamLogos(document, maps);
+    } catch (e) {
+      console.warn("Teams JSON load failed:", e);
+    }
   </script>
 </body>
 </html>
