--- a/team_list.html
+++ b/team_list.html
@@ -166,8 +166,8 @@
     renderTabs();
   </script>
 <script type="module">
-    import { injectHeader } from "header.js";
-    import { loadTeams, hydrateTeamLogos } from "teams-util.js";
+    import { injectHeader } from "./header.js";
+    import { loadTeams, hydrateTeamLogos } from "./teams-util.js";
     // Header
     injectHeader("#site-header", { active: "teams" });
     // Team/logo hydration (keeps names/logos consistent from data/teams.json)
