--- a/tournament.html
+++ b/tournament.html
@@ -31,30 +31,7 @@
 <body class="text-black">
 
   <!-- ✅ Header -->
-  <header class="bg-white shadow-lg sticky top-0 z-50">
-    <div class="container mx-auto flex justify-between items-center p-4">
-      
-      <!-- Logo + Text -->
-      <div class="flex items-center gap-3">
-        <img src="Independence-Cup-logo.jpg" 
-             alt="We Are Eleven Logo" 
-             class="h-14 w-14 sm:h-16 sm:w-16 rounded-full object-contain" />
-        <h1 class="text-2xl font-bold">
-          <span class="text-gray-900">We Are</span> 
-          <span class="text-red-600">Eleven</span>
-        </h1>
-      </div>
-
-      <!-- Nav -->
-      <nav class="space-x-6">
-        <a href="index.html" class="text-gray-700 font-medium active" aria-current="page">Home</a>
-        <a href="team_list.html" class="text-gray-700 font-medium">Teams</a>
-        <a href="team_fixtures.html" class="text-gray-700 font-medium">Fixtures</a>
-        <a href="admin.html" class="text-gray-700 font-medium">Admin</a>
-        <a href="about_us.html" class="text-gray-700 font-medium">About Us</a>
-      </nav>
-    </div>
-  </header>
+  <div id="site-header"></div>
 
   <!-- ✅ Main layout -->
   <main class="container mx-auto px-4 md:px-0 py-10 grid grid-cols-1 md:grid-cols-3 gap-10">
@@ -111,6 +88,19 @@
     <p>© 2025 Football Community. All Rights Reserved.</p>
   </footer>
 
+<script type="module">
+    import { injectHeader } from "./header.js";
+    import { loadTeams, hydrateTeamLogos } from "./teams-util.js";
+    // Header
+    injectHeader("#site-header", { active: "tournaments" });
+    // Team/logo hydration (keeps names/logos consistent from data/teams.json)
+    try {
+      const maps = await loadTeams();
+      hydrateTeamLogos(document, maps);
+    } catch (e) {
+      console.warn("Teams JSON load failed:", e);
+    }
+  </script>
 </body>
 </html>
 
