--- a/about_us.html
+++ b/about_us.html
@@ -74,38 +74,7 @@
 <body class="text-black flex flex-col min-h-screen">
 
   <!-- Header -->
-  <header class="bg-white shadow-lg sticky top-0 z-50">
-    <div class="container mx-auto flex justify-between items-center p-4">
-      <div class="flex items-center gap-3">
-        <img src="We_are_eleven_logo copy.jpg" alt="We Are Eleven Logo" class="h-14 w-14 sm:h-16 sm:w-16 rounded-full object-contain" />
-        <h1 class="text-2xl font-bold">
-          <span class="text-gray-900">We Are</span>
-          <span class="text-red-600">Eleven</span>
-        </h1>
-      </div>
-      <nav class="space-x-6 hidden md:flex">
-        <a href="index.html" class="nav-link text-gray-700 font-medium">Home</a>
-        <a href="team_list.html" class="nav-link text-gray-700 font-medium">Teams</a>
-        <a href="team_fixtures.html" class="nav-link text-gray-700 font-medium">Fixtures</a>
-        <a href="admin.html" class="nav-link text-gray-700 font-medium">Admin</a>
-        <a href="about_us.html" class="nav-link active font-medium" aria-current="page">About Us</a>
-      </nav>
-      <!-- Mobile menu button -->
-      <button id="mobile-menu-button" class="md:hidden" aria-label="Toggle menu">
-        <svg class="h-6 w-6 text-gray-700" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M4 6h16M4 12h16M4 18h16"></path>
-        </svg>
-      </button>
-    </div>
-    <!-- Mobile Menu -->
-    <div id="mobile-menu" class="hidden flex flex-col bg-white shadow-md border-t border-slate-200">
-      <a href="index.html" class="mobile-link p-4 font-medium border-b border-slate-200">Home</a>
-      <a href="team_list.html" class="mobile-link p-4 font-medium border-b border-slate-200">Teams</a>
-      <a href="team_fixtures.html" class="mobile-link p-4 font-medium border-b border-slate-200">Fixtures</a>
-      <a href="admin.html" class="mobile-link p-4 font-medium border-b border-slate-200">Admin</a>
-      <a href="about_us.html" class="mobile-link p-4 font-medium active" aria-current="page">About Us</a>
-    </div>
-  </header>
+  <div id="site-header"></div>
 
   <!-- Main Content -->
   <main class="flex-grow max-w-6xl mx-auto p-4">
@@ -172,6 +141,19 @@
       mobileMenuBtn.setAttribute("aria-expanded", !expanded);
       mobileMenu.classList.toggle("hidden");
     });
+  </script>
+<script type="module">
+    import { injectHeader } from "./header.js";
+    import { loadTeams, hydrateTeamLogos } from "./teams-util.js";
+    // Header
+    injectHeader("#site-header", { active: "about" });
+    // Team/logo hydration (keeps names/logos consistent from data/teams.json)
+    try {
+      const maps = await loadTeams();
+      hydrateTeamLogos(document, maps);
+    } catch (e) {
+      console.warn("Teams JSON load failed:", e);
+    }
   </script>
 </body>
 </html>
