--- a/join.html
+++ b/join.html
@@ -18,18 +18,7 @@
 <body class="bg-gray-900 text-white">
 
   <!-- ✅ Header -->
-  <header class="bg-gray-950 shadow-lg sticky top-0 z-50">
-    <div class="container mx-auto flex justify-between items-center p-4">
-      <h1 class="text-2xl font-bold text-green-400">We Are Eleven</h1>
-      <nav class="space-x-6">
-        <a href="index.html" class="nav-link">Home</a>
-        <a href="team_list.html" class="nav-link">Teams</a>
-        <a href="team_fixtures.html" class="nav-link">Fixtures</a>
-        <a href="tournament.html" class="nav-link">Tournaments</a>
-        <a href="about_us.html" class="nav-link">About Us</a>
-      </nav>
-    </div>
-  </header>
+  <div id="site-header"></div>
 
   <!-- ✅ Tabbed Register/Login -->
   <section class="relative min-h-screen flex items-center justify-center bg-gray-900 px-6">
@@ -183,6 +172,19 @@
         authMessage.classList.add("text-red-400");
       }
     });
+  </script>
+<script type="module">
+    import { injectHeader } from "./header.js";
+    import { loadTeams, hydrateTeamLogos } from "./teams-util.js";
+    // Header
+    injectHeader("#site-header", { active: "" });
+    // Team/logo hydration (keeps names/logos consistent from data/teams.json)
+    try {
+      const maps = await loadTeams();
+      hydrateTeamLogos(document, maps);
+    } catch (e) {
+      console.warn("Teams JSON load failed:", e);
+    }
   </script>
 </body>
 </html>
