--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
     <!-- Watermark + Description + Button -->
     <div class="watermark">
-      <img src="We_are_eleven_logo copy.jpg" alt="We Are Eleven Watermark" />
+      <img src="We_are_eleven_logo.jpg" alt="We Are Eleven Watermark" />
       
       <!-- ✅ Welcome Text -->
       <h2 class="text-3xl font-bold mt-6 text-black">
