--- a/profile.html
+++ b/profile.html
@@ -102,7 +102,7 @@
     // Logout
     document.getElementById("logoutBtn").addEventListener("click", () => {
       signOut(auth).then(() => {
-        window.location.href = "register_login.html";
+        window.location.href = "join.html";
       }).catch((error) => {
         console.error("Logout error:", error);
       });
