--- a/index.html
+++ b/index.html
@@ -54,23 +54,120 @@
   <!-- ✅ Header -->
   <div id="site-header"></div>
 
-  <!-- ✅ Hero Section with Watermark + Description -->
-  <section class="relative h-[80vh] flex flex-col items-center justify-center text-center px-4">
-    
-    <!-- Watermark + Description + Button -->
-    <div class="watermark">
-      <img src="We_are_eleven_logo.jpg" alt="We Are Eleven Watermark" />
-      
-      <!-- ✅ Welcome Text -->
-      <h2 class="text-3xl font-bold mt-6 text-black">
-        Welcome to <span class="text-black">We Are</span> <span class="text-red-600">Eleven</span>
-      </h2>
   
-      <!-- ✅ Join Button -->
-      <a href="join.html" 
-         class="mt-6 bg-green-500 hover:bg-green-600 text-white px-8 py-3 rounded-full text-lg font-semibold shadow-lg transition animate-[float_3s_ease-in-out_infinite]">
-        Join Us
-      </a>
+
+  
+  <!-- 🏟️ Hero with football-themed background -->
+  <section class="relative overflow-hidden">
+    <div class="absolute inset-0 bg-[radial-gradient(ellipse_at_center,rgba(0,0,0,0.35),rgba(0,0,0,0.8))] z-0"></div>
+    <div class="absolute inset-0 bg-cover bg-center z-[-1]" style="background-image:url('assets/img/hero-stadium.jpg');"></div>
+    <div class="relative z-10 mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-24 text-center text-white">
+      <h1 class="text-4xl sm:text-5xl font-extrabold leading-tight">
+        Uniting Football Enthusiasts, One Goal at a Time
+      </h1>
+      <p class="mt-4 text-lg text-gray-200">Join a growing community of players, fans, and organizers.</p>
+      <div class="mt-8">
+        <a href="join.html" class="inline-flex items-center justify-center px-10 py-4 rounded-full bg-green-500 hover:bg-green-600 shadow-lg text-white text-lg font-semibold transition">
+          Join Us
+        </a>
+      </div>
+      <!-- Tournament banner -->
+      <div class="mt-10 inline-flex items-center gap-3 bg-white/10 backdrop-blur rounded-2xl px-5 py-3 border border-white/20">
+        <span class="text-xl">🏆</span>
+        <div class="text-left">
+          <div class="font-semibold">Independence Cup 2025</div>
+          <div class="text-sm text-gray-200">Starts August 15</div>
+        </div>
+        <a href="team_fixtures.html" class="ml-4 text-sm font-semibold underline decoration-2 underline-offset-4">View Fixtures</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- 💡 Why Join Us -->
+  <section class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-16">
+    <h2 class="text-3xl font-bold text-center mb-10">Why Join Us?</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+      <div class="rounded-2xl border bg-white p-6 shadow-sm hover:shadow-md transition">
+        <div class="text-3xl mb-3">⚽</div>
+        <h3 class="font-semibold mb-1">Competitive Tournaments</h3>
+        <p class="text-gray-600 text-sm">Well-structured fixtures, fair play, and thrilling matchdays.</p>
+      </div>
+      <div class="rounded-2xl border bg-white p-6 shadow-sm hover:shadow-md transition">
+        <div class="text-3xl mb-3">🤝</div>
+        <h3 class="font-semibold mb-1">Community Spirit</h3>
+        <p class="text-gray-600 text-sm">Meet passionate players and build lasting friendships.</p>
+      </div>
+      <div class="rounded-2xl border bg-white p-6 shadow-sm hover:shadow-md transition">
+        <div class="text-3xl mb-3">🏆</div>
+        <h3 class="font-semibold mb-1">Recognition & Awards</h3>
+        <p class="text-gray-600 text-sm">Trophies, medals, and shout-outs for standout performances.</p>
+      </div>
+      <div class="rounded-2xl border bg-white p-6 shadow-sm hover:shadow-md transition">
+        <div class="text-3xl mb-3">📸</div>
+        <h3 class="font-semibold mb-1">Event Highlights & Photos</h3>
+        <p class="text-gray-600 text-sm">Relive the best moments with curated galleries and reels.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- 💬 Testimonials Slider -->
+  <section class="bg-slate-50 py-16">
+    <div class="mx-auto max-w-3xl px-4 sm:px-6 lg:px-8 text-center">
+      <h2 class="text-3xl font-bold mb-8">What Captains Say</h2>
+      <div id="testimonial" class="rounded-2xl border bg-white p-8 shadow-sm min-h-[140px] flex flex-col items-center justify-center">
+        <p class="text-lg leading-relaxed" id="testimonial-text">
+          “Best organized amateur tournament in the city!” – Subhojit, Captain of Amigos FC
+        </p>
+      </div>
+      <div class="mt-6 flex items-center justify-center gap-3">
+        <button id="prevTest" class="px-3 py-1 rounded-full border bg-white hover:bg-slate-100">Prev</button>
+        <button id="nextTest" class="px-3 py-1 rounded-full border bg-white hover:bg-slate-100">Next</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- 🖼️ Matchday Gallery -->
+  <section class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-16">
+    <div class="flex items-center justify-between mb-6">
+      <h2 class="text-3xl font-bold">Action Shots</h2>
+      <a href="#" class="text-sm font-semibold text-blue-600 hover:underline">View all photos</a>
+    </div>
+    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-3">
+      <img src="assets/img/gallery-1.jpg" alt="Match action 1" class="rounded-xl object-cover aspect-[4/3]" />
+      <img src="assets/img/gallery-2.jpg" alt="Match action 2" class="rounded-xl object-cover aspect-[4/3]" />
+      <img src="assets/img/gallery-3.jpg" alt="Match action 3" class="rounded-xl object-cover aspect-[4/3]" />
+      <img src="assets/img/gallery-4.jpg" alt="Match action 4" class="rounded-xl object-cover aspect-[4/3]" />
+      <img src="assets/img/gallery-5.jpg" alt="Match action 5" class="rounded-xl object-cover aspect-[4/3]" />
+      <img src="assets/img/gallery-6.jpg" alt="Match action 6" class="rounded-xl object-cover aspect-[4/3]" />
+      <img src="assets/img/gallery-7.jpg" alt="Match action 7" class="rounded-xl object-cover aspect-[4/3]" />
+      <img src="assets/img/gallery-8.jpg" alt="Match action 8" class="rounded-xl object-cover aspect-[4/3]" />
+    </div>
+  </section>
+
+  <!-- ▶️ Highlights / Social -->
+  <section class="bg-slate-50 py-16">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 items-start">
+        <div>
+          <h2 class="text-3xl font-bold mb-4">Highlights</h2>
+          <div class="aspect-video rounded-2xl overflow-hidden shadow">
+            <iframe class="w-full h-full" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Highlights"
+              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+          </div>
+        </div>
+        <div>
+          <h2 class="text-3xl font-bold mb-4">Instagram</h2>
+          <div class="grid grid-cols-3 gap-3">
+            <div class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400">Post</div>
+            <div class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400">Post</div>
+            <div class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400">Post</div>
+            <div class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400">Post</div>
+            <div class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400">Post</div>
+            <div class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400">Post</div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -79,18 +176,29 @@
     <p>© 2025 Football Community. All Rights Reserved.</p>
   </footer>
 
-<script type="module">
+
+  <script type="module">
     import { injectHeader } from "./header.js";
     import { loadTeams, hydrateTeamLogos } from "./teams-util.js";
-    // Header
     injectHeader("#site-header", { active: "home" });
-    // Team/logo hydration (keeps names/logos consistent from data/teams.json)
     try {
       const maps = await loadTeams();
       hydrateTeamLogos(document, maps);
-    } catch (e) {
-      console.warn("Teams JSON load failed:", e);
-    }
+    } catch (e) { console.warn(e); }
+    // Simple testimonials slider
+    const quotes = [
+      "“Best organized amateur tournament in the city!” – Subhojit, Captain of Amigos FC",
+      "“Competitive yet friendly—exactly what we wanted.” – Ayon, Thunderbolt",
+      "“Great refereeing and fixtures that run on time.” – Rahul, White Panthers"
+    ];
+    let qi = 0;
+    const tEl = document.getElementById('testimonial-text');
+    const prev = document.getElementById('prevTest');
+    const next = document.getElementById('nextTest');
+    function show(i){ if(tEl){ tEl.textContent = quotes[i]; } }
+    if(prev) prev.addEventListener('click', ()=>{ qi=(qi-1+quotes.length)%quotes.length; show(qi); });
+    if(next) next.addEventListener('click', ()=>{ qi=(qi+1)%quotes.length; show(qi); });
   </script>
+
 </body>
 </html>
