--- a/tournament.html
+++ b/tournament.html
@@ -89,7 +89,7 @@
   </footer>
 
 <script type="module">
-    import { injectHeader } from "./header.js";
+    import { injectHeader } from "./tournament_header.js";
     import { loadTeams, hydrateTeamLogos } from "./teams-util.js";
     // Header
     injectHeader("#site-header", { active: "tournaments" });
@@ -103,6 +103,7 @@
   </script>
 </body>
 </html>
+
 
 
 
