--- a/team_list.html
+++ b/team_list.html
@@ -166,7 +166,7 @@
     renderTabs();
   </script>
 <script type="module">
-    import { injectHeader } from "./header.js";
+    import { injectHeader } from "./tournament_header.js";
     import { loadTeams, hydrateTeamLogos } from "./teams-util.js";
     // Header
     injectHeader("#site-header", { active: "teams" });
