--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -586,7 +586,7 @@
     });
   </script>
 <script type="module">
-    import { injectHeader } from "./header.js";
+    import { injectHeader } from "./tournament_header.js";
     import { loadTeams, hydrateTeamLogos } from "./teams-util.js";
     // Header
     injectHeader("#site-header", { active: "fixtures" });
@@ -600,4 +600,5 @@
   </script>
 </body>
 </html>
+
 
